--- a/www/templates/splash.html
+++ b/www/templates/splash.html
@@ -1,5 +1,21 @@
-<ion-view title="Title">
+<ion-view title="kVar" ng-init="init();">
 	<ion-content>
-    Content Here
+
+		<div class="container nomargin vh-100 vw-100" style="background-color:#118914;" >
+
+
+
+			<img src="img/kvar.png" alt="" class="responsive-img mtvw-40" style="margin-left:27vw;width:50%" />
+
+			<div class="container">
+				<span style="color:white;font-size:20px;" class="center-align">a kVar & < Developmind > App</span>
+
+			</div>
+
+
+</div>
+
+<a class="waves-effect waves-light btn vw-100" style="position:absolute;bottom:0px;;" ng-click="goTo();">Realizar cotizacion</a>
+
   </ion-content>
 </ion-view>
